# pwadmin-py

./: .env.example  .gitignore  DEPLOY.md  README.md  gs_zone.sh  pwadmin.service  pyproject.toml  requirements.txt
app/: config.py  database.py  deps.py  main.py  pw_socket.py
app/auth/: csrf.py  passwords.py  sessions.py
app/models/: audit.py  game.py  users.py
app/routers/: accounts.py  activity_log.py  auth.py  characters.py  events.py  game.py  gshop.py  items.py  maps.py  server.py
app/services/: accounts.py  ban.py  events.py  game_client.py  game_mail.py  game_protocol.py  gshop.py  instance_watch.py  item_data.py  items.py  server_config.py  server_status.py
data/: pw_item_addons.json  pw_item_stats.json  pw_items.json
docs/: instance-autostart.md  ptemplate-general-section.md  zone-lifecycle-and-gm-protocol.md
patches/: README.md
patches/pw_expfix_1.4.2/: README.md  pw_expfix.c
patches/pw_expfix_1.5.5/: README.md
patches/pw_instance_watch_1.5.5/: README.md
scripts/: convert_items.php
server/: README.md  pwserver.service  start.sh  stop.sh
server/example-configs/: README.md  gamed_gmserver.conf  gamedbd_gamesys.conf  gdeliveryd_gamesys.conf  ptemplate.conf  uniquenamed_gamesys.conf
server/patches/: README.md
static/js/: accountpicker.js  accounts.js  ibuild.js
templates/: base.html  login.html
templates/account/: index.html
templates/events/: index.html
templates/gshop/: index.html
tests/: test_accounts.py  test_auth.py  test_game_client.py  test_gshop.py  test_server_config.py
tools/: README.md  generate_items.py
(+9 files in other folders)
