[project]
name = "pwadmin-py"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2",
    "pydantic-settings>=2.0",
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
